--- a/src/components/principalCard.css
+++ b/src/components/principalCard.css
@@ -1,21 +1,17 @@
 :root {
   --principal-color: #1e213a;
+  --secondary-color: #100e1d;
   --principal-letters: #e7e7eb;
   --secondary-letters: #88869d;
 }
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-size: 62.5%;
-}
+
 .current-weather {
   width: 100%;
   height: 100vh;
+  max-width: 400px;
   display: grid;
   justify-content: center;
   align-items: center;
-  /* background-image: url(../assets/Cloud-background.png); */
   background-color: var(--principal-color);
   padding-bottom: 20px;
 }
@@ -43,4 +39,71 @@
   text-align: center;
   font-size: 2.6rem;
   color: var(--secondary-letters);
+}
+.button-temperture {
+  height: 50px;
+  width: 130px;
+  font-size: 1.8rem;
+  border-radius: 6px;
+  border: none;
+  box-shadow: 1px 1px 10px var(--principal-letters);
+  justify-self: center;
+}
+.button-temperture:hover {
+  background-color: #88869d;
+  transition: background-color 400ms;
+}
+
+.prediction-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 60px 30px;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.information {
+  background-color: var(--secondary-color);
+}
+
+.hightlights h3 {
+  font-size: 2rem;
+  color: var(--principal-letters);
+  text-align: center;
+  padding: 20px;
+}
+.current-hightlights {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding: 20px;
+}
+.card-hightlights {
+  color: var(--principal-letters);
+  font-size: 2rem;
+  width: 250px;
+  height: 140px;
+  background-color: var(--principal-color);
+  border-radius: 10px;
+  display: grid;
+  grid-template-rows: 0.5fr 1fr;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-hightlights p:nth-child(1) {
+  font-size: 2rem;
+  margin: 20px;
+  text-align: center;
+}
+.card-hightlights p:nth-child(2) {
+  font-size: 4rem;
+  text-align: center;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+span {
+  font-weight: 300;
 }
