--- a/src/components/principalCard.css
+++ b/src/components/principalCard.css
@@ -9,6 +9,7 @@
   width: 100%;
   height: 100vh;
   max-width: 400px;
+  min-width: 300px;
   display: grid;
   justify-content: center;
   align-items: center;
@@ -106,4 +107,49 @@
 }
 span {
   font-weight: 300;
+}
+@media (min-width: 500px) {
+  .weather-container {
+    display: flex;
+    gap: 30px;
+  }
+  .prediction-container {
+    padding: 30px 10px;
+  }
+}
+@media (min-width: 1000px) {
+  .weather-container {
+    height: 100vh;
+  }
+  .card-hightlights {
+    font-size: 1.7rem;
+    width: 180px;
+    height: 120px;
+  }
+  .card-hightlights p:nth-child(1) {
+    font-size: 1.6rem;
+    margin: 10px;
+  }
+  .card-hightlights p:nth-child(2) {
+    font-size: 2.6rem;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+}
+@media (min-width: 1271px) {
+  .card-hightlights {
+    font-size: 2rem;
+    width: 250px;
+    height: 140px;
+  }
+  .card-hightlights p:nth-child(1) {
+    font-size: 2rem;
+    margin: 20px;
+  }
+  .card-hightlights p:nth-child(2) {
+    font-size: 4rem;
+  }
+  .prediction-container {
+    padding: 60px 20px;
+  }
 }
